# g2o

./: .gitignore  CMakeLists.txt  README.md
g2o/: CMakeLists.txt  what_is_in_these_directories.txt
g2o/core/: CMakeLists.txt  block_solver.h  block_solver.hpp  optimization_algorithm.h  optimization_algorithm_dogleg.cpp  optimization_algorithm_dogleg.h  optimization_algorithm_gauss_newton.cpp  optimization_algorithm_gauss_newton.h  optimization_algorithm_levenberg.cpp  optimization_algorithm_levenberg.h  optimization_algorithm_with_hessian.cpp  optimization_algorithm_with_hessian.h  sparse_optimizer.cpp  sparse_optimizer.h
g2o/fea/: CMakeLists.txt  fea.cpp  fea.hpp  fem.cpp  fem.hpp  pos.cpp  pos.hpp
g2o/solvers/structure_only/: structure_only_solver.h
